added more artists and infos

--- a/views/navigation.phtml
+++ b/views/navigation.phtml
@@ -8,12 +8,15 @@
       <li><a data-method="async" href="/artists">Artist overview</a></li>
       <li class="divider"></li>
       <li><a data-method="async" href="/artist/aljoshakonstanty">Aljosha Konstanty</a></li>
+      <li><a data-method="async" href="/artist/cosmicchuen">Cosmic Chuen</a></li>
       <li><a data-method="async" href="/artist/darwinxp">Darwin Experience</a></li>
       <li><a data-method="async" href="/artist/euphoristix">Euphoristix</a></li>
+      <li><a data-method="async" href="/artist/nopublicity">No Publicity</a></li>
       <li><a data-method="async" href="/artist/sherwee">Sherwee</a></li>
       <li><a data-method="async" href="/artist/shinson">Shinson</a></li>
       <li><a data-method="async" href="/artist/spekta">Spekta</a></li>
       <li><a data-method="async" href="/artist/stormanimal">StormAnimal</a></li>
+      <li><a data-method="async" href="/artist/take">Take</a></li>
     </ul>
   </li>
 </ul>
