--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,6 +1,13 @@
 /*responsive modifications, all defaults in bootstrap-responsive.css*/
 
 @media (max-width: 480px) {
+.hero-unit {
+     padding: 15px 19px 30px !important;
+	 font-size: inherit;
+}
+.hero-unit  h1 {
+	line-height: 40px;
+}
 .navbar {
     padding: 0;
 }
@@ -154,7 +161,10 @@ padding: 0 20px;
 	font-size: 1em;
 }
 .hero-unit h1 {
-	font-size: 1.8em;
+	font-size: 2.6em;
+	line-heigh: 2.0em;
+	padding-bottom: 0;
+    padding-top: 0;
 }
 .about-us p {
 	font-size: 12px;
@@ -198,5 +208,11 @@ padding: 0 20px;
 }
 #page .header  {
   margin-top: 0;
+}
+}
+
+@media (min-width: 767px) {
+#content {
+	padding-top: 102px;
 }
 }
