--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -6,12 +6,12 @@
 <? if (isset($metaTitle)): ?>
 <title><?= $metaTitle ?> - 3886records</title>
 <? else: ?>
-<title>3886records - independent electronic music label</title>
+<title>3886records - Finest electronic music</title>
 <? endif ?>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Your Description">
-<meta name="author" content="Your Name">
-
+<meta name="description" content="Finest electronic music">
+<meta name="author" content="3886records">
+<meta property="og:image" content="http://www.3886records.de/img/3886logo.png" />
 <!-- the styles -->
 <link href="/css/supersized.css" rel="stylesheet" media="screen">
 <link rel="stylesheet" href="/theme/supersized.shutter.css" type="text/css" media="screen" />
@@ -38,16 +38,31 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body class="ui">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-42251912-1', '3886records.de');
+  ga('send', 'pageview');
+</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/all.js#xfbml=1&appId=583037658388035";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <div class="spinner"></div> 
-<!--+++++++++++- header+++++++++++-->
 <header>
   <nav data-navgroup="main">
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="brand" href="/">
-            <img style=" height: 62px; margin-top: -24px; margin-right: 7px;" border="0" src="/img/3886logo-small.png" />
+          <a class="brand" href="/" data-method="async">
+            <? /*<img style=" height: 62px; margin-top: -24px; margin-right: 7px;" border="0" src="/img/3886logo-small.png" />*/ ?>
 			<span class="head"><span class="raleway">3886</span>records</span>
           </a>
           <div class="nav-collapse collapse">
@@ -58,26 +73,22 @@
     </div>
   </nav>
 </header>
-<!--+++++++++++ content++++++++++++++-->
 <div id="content">
     <?= $content ?>
 </div>
-<!--+++++++++++ footer ++++++++++++++-->
 <footer>
-  <div id="thumb-tray" class="load-item">
-    <div id="thumb-back"></div>
-    <div id="thumb-forward"></div>
-  </div>
   <div id="controls-wrapper" class="load-item">
     <div class="container">
       <div id="controls"> 
         <div id="credits_footer"><small>3886records ©2013</div>
-        <div id="social"><small> Follow us: </small><a class="facebook tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Facebook" target="_blank" href="http://www.facebook.com/3886records"><i class="icon-facebook-sign icon-large"></i></a></div>
+        <div id="social"><small> Follow us: </small>
+			<a class="facebook tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Facebook" target="_blank" href="http://www.facebook.com/3886records"><i class="icon-facebook-sign icon-large"></i></a>
+			<a class="twitter tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Twitter" target="_blank" href="http://www.twitter.com/3886records"><i class="icon-twitter-sign icon-large"></i></a>
+			<a class="youtube tooltips" data-container="body" data-placement="top" data-trigger="hover" data-title="Youtube" target="_blank" href="http://www.youtube.com/user/3886records"><i class="icon-youtube-sign icon-large"></i></a>
+		</div>
     </div>
   </div>
 </footer>
-<!-- the javascript on bottom to improve loading speed -->
-<!--script src="/js/jquery-1.8.3.min.js"></script--> 
 <script src="/js/jquery-1.9.1.js"></script>
 <script src="/js/bootstrap.min.js"></script> 
 <script src="/js/jquery.easing.min.js"></script> 
