--- a/views/artist.phtml
+++ b/views/artist.phtml
@@ -7,27 +7,27 @@
 			<ul class="thumbnails">
 				<li>
 					<div class="thumbnail">
-						<img src="/img/artists/<?= $artist->key ?>.jpg" alt="<?= $artist->name ?>" />
+						<img width="200" height="200" src="/img/artists/<?= $artist->key ?>.jpg" alt="<?= $artist->name ?>" />
 					</div>
 				</li>
 			</ul>
 		</div>
-		<? if (isset($artist->longInfo)): ?>
+		<? if (!empty($artist->longInfo)): ?>
 			<div class="span7">
 				<p><?= $artist->longInfo ?></p>
 			</div>
 		<? endif ?>
-		<? if (isset($artist->links)): ?>
+		<? if (count($artist->links)): ?>
 			<ul class="social">
-			<? foreach ($artist->links as $type => $link): ?>
-				<li><a target="_blank" href="<?= $link ?>"><img alt="<?= ucfirst($type) ?>" title="<?= ucfirst($type) ?>" src="/img/social/<?= $type ?>.png" border="0" /></a></li>
+			<? foreach ($artist->links as $link): ?>
+				<li><a target="_blank" href="<?= $link->link ?>"><img alt="<?= ucfirst($link->type) ?>" title="<?= ucfirst($link->type) ?>" src="/img/social/<?= $link->type ?>.png" border="0" /></a></li>
 			<? endforeach ?>
 			</ul>
 		<? endif ?>
 		<div class="clear"></div>
     </div>
 </div>
-<? if (isset($artist->events) && is_array($artist->events) && count($artist->events)): ?>
+<? if (count($artist->events)): ?>
 	<div class="container events">
 		<h2>Upcomming Events with <?= $artist->name ?></h2>
 		<ul class="thumbnails">
@@ -35,11 +35,14 @@
 				<li class="span4">
 					<div class="thumbnail">
 						<h4><?= $event->name ?></h4>
-						<span class="location"><?= $event->location ?></span><br/>
-						<span class="date"><?= $event->date ?> <?= $event->time ?></span>
-						<img src="/img/events/<?= $event->image ?>" border="0" alt="<?= $event->name ?>" title="<?= $event->name ?>"
-						<? if (isset($event->facebook)): ?>
-							<br/><strong><a href="<?= $event->facebook ?>" target="_blank">Event on Facebook</a></strong>
+						<span class="location"><?= $event->shortInfo ?></span><br/>
+						<span class="date"><?= $event->fromTime ?></span>
+						<? if (!empty($event->facebook)): ?>
+							<br/><a target="_blank" title="Event on Facebook" href="<?= $event->facebook ?>">
+						<? endif ?>
+						<img src="/img/events/<?= $event->flyer ?>" border="0" alt="<?= $event->name ?>" title="<?= $event->name ?>"
+						<? if (!empty($event->facebook)): ?>
+							</a>
 						<? endif ?>
 					</div>
 				</li>
@@ -47,21 +50,21 @@
 		</ul>
 	</div>
 <? endif ?>
-<? if (isset($artist->youtube) && is_array($artist->youtube)): ?>
+<? if (count($artist->videos)): ?>
 	<div class="container videos">
 		<h2>Videos</h2>
 		<ul class="thumbnails with-border">
-			<? foreach ($artist->youtube as $video): ?>
+			<? foreach ($artist->videos as $video): ?>
 				<li class="span6">
 					<div class="thumbnail">
-						<iframe style="margin-left: auto; margin-right: auto;" width="100%" height="360" src="<?= $video ?>" frameborder="0" allowfullscreen></iframe>
+						<iframe style="margin-left: auto; margin-right: auto;" width="100%" height="360" src="<?= $video->link ?>" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</li>
 			<? endforeach ?>
 		</ul>
 	</div>
 <? endif ?>
-<? if (isset($artist->soundcloud)): ?>
+<? if (!empty($artist->soundcloud)): ?>
 	<div class="container">
 		<h2>Tracks</h2>
 		<iframe width="100%" height="450" scrolling="no" frameborder="no" src="<?= $artist->soundcloud ?><?= DataProvider::getInstance()->getSoundcloudParams() ?>"></iframe>
