--- a/views/navigation.phtml
+++ b/views/navigation.phtml
@@ -4,7 +4,7 @@
   <li class="divider-vertical"></li>
   <li class="dropdown"><a href="/artists" class="dropdown-toggle" data-toggle="dropdown"><span class="current"><i class="icon-signal"></i></span> Releases <b class="caret"></b></a>
     <ul class="dropdown-menu">
-		<li><a data-method="async" href="/releases/upcomming">Upcomming Releases</a></li>
+		<li><a data-method="async" href="/releases/upcoming">Upcoming Releases</a></li>
 		<li><a data-method="async" href="/releases/latest">Latest Releases</a></li>
     </ul>
   </li>
