finished frontend for mailinglist subscriptions

--- a/views/home_new.phtml
+++ b/views/home_new.phtml
@@ -26,23 +26,23 @@
 		</ul>
 		<a data-method="async" class="bottom" href="/events">all events</a>
 	</div>
-	<?/*<div class="span4 backgrounded">
+	<div class="span4 backgrounded">
 		<h4>Subscribe to newsletter</h4>
 		<p>
 			Don't miss any release and get limited promotional offers!
-			<form method="post" action="/subscriptions/subscribe">
+			<form method="post" action="/subscriptions">
 				<input name="email" type="email" placeholder="E-Mail Address" /><br/>
 				<input type="submit" class="btn" value="Subscribe now">
 			</form>
 		</p>
-	</div>*/?>
-	<div class="span4 backgrounded">
+	</div>
+	<?/*<div class="span4 backgrounded">
 		<h4>Send your Demo!</h4>
 		<p>
 			We're looking for talented artists in the genres Trance, Goa, House and Chillout. We are listening to every submitted sound!
 		</p>
 		<a target="_blank" href='http://soundcloud.com/3886records/dropbox' class='soundcloud-dropbox'>Send us your track!</a>
-	</div>
+	</div>*/?>
 </div>
 <div class="container">
 	<div class="span4 first backgrounded">
