--- a/views/subscriptions.phtml
+++ b/views/subscriptions.phtml
@@ -11,7 +11,7 @@
 			<h4>Subscribe to newsletter</h4>
 			<p>
 				<strong>Don't miss any release and get limited promotional offers!</strong>
-				<form method="post" action="/subscriptions/subscribe">
+				<form method="post" action="/subscriptions">
 					<input name="email" type="email" placeholder="E-Mail Address" /><br/>
 					<input type="submit" class="btn" value="Subscribe now">
 				</form>
