added a basic promotion page with cool tapes as mp3 players

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Finest electronic music">
 <meta name="author" content="3886records">
-<meta property="og:image" content="http://www.3886records.de/img/3886logo.png" />
+<meta property="og:image" content="<?= isset($facebookImage) ? $facebookImage : 'http://www.3886records.de/img/3886logo.png' ?>" />
 <!-- the styles -->
 <link href="/css/supersized.css" rel="stylesheet" media="screen">
 <link rel="stylesheet" href="/theme/supersized.shutter.css" type="text/css" media="screen" />
