re-added overlays and removed image masks from tapes

--- a/views/promotion.phtml
+++ b/views/promotion.phtml
@@ -17,8 +17,6 @@
 			  <canvas class="blur-image"></canvas>
 			 </div>
 			 <div class="transparency-sheet"></div>
-			 <div class="tape-shell image-mask" data-image-repeat="true" data-mask-url="/img/ma-r90-mask.png"></div>
-			 <div class="tape-gradient image-mask" data-mask-url="/img/ma-r90-mask.png"></div>
 			 <div class="tab-left">
 			  <div class="notch"></div>
 			  <div class="ridge"></div>
@@ -81,8 +79,6 @@
 			  <canvas class="blur-image"></canvas>
 			 </div>
 			 <div class="transparency-sheet"></div>
-			 <div class="tape-shell image-mask" data-image-repeat="true" data-mask-url="/img/ma-r90-mask.png"></div>
-			 <div class="tape-gradient image-mask" data-mask-url="/img/ma-r90-mask.png"></div>
 			 <div class="tab-left">
 			  <div class="notch"></div>
 			  <div class="ridge"></div>
@@ -147,8 +143,6 @@
 			  <canvas class="blur-image"></canvas>
 			 </div>
 			 <div class="transparency-sheet"></div>
-			 <div class="tape-shell image-mask" data-image-repeat="true" data-mask-url="/img/ma-r90-mask.png"></div>
-			 <div class="tape-gradient image-mask" data-mask-url="/img/ma-r90-mask.png"></div>
 			 <div class="tab-left">
 			  <div class="notch"></div>
 			  <div class="ridge"></div>
@@ -263,7 +257,7 @@
 	</div>
 </div>
 
-<script src="/js/soundmanager2.js"></script>
+<script src="/js/soundmanager2-nodebug-jsmin.js"></script>
 <script src="/js/cassette-tape-ui.js"></script>
 
 <?/*<script src="/js/soundmanager2.js"></script>
